crates/rome_formatter/tests/specs/prettier/typescript/declare/declare_module.ts.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 125
expression: declare_module.ts

---
# Input
```js
declare module m {
  class C {
    field = "field";
  }
}

```

# Output
```js
declare module m {
  class C {
    field = "field";
  }
}

```

# Errors
```
error[SyntaxError]: Abstract properties cannot have initializers
  ┌─ declare_module.ts:3:5
  │
3 │     field = "field";
  │     ^^^^^^^^^^^^^^^^


```


